<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <SurfaceView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/sfv1"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/instrucciones"
        android:id="@+id/textView54"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressbancoplano1"
        android:id="@+id/textView55"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressbancoplano2"
        android:id="@+id/textView56"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressbancoplano3"
        android:id="@+id/textView57"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressbancoplano4"
        android:id="@+id/textView58"
        android:layout_margin="5dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp" />

</LinearLayout>