<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/sfv8"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/instrucciones"
        android:id="@+id/textView76"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aperturainclinadoconmancuernas1"
        android:id="@+id/textView77"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aperturainclinadoconmancuernas2"
        android:id="@+id/textView78"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aperturainclinadoconmancuernas3"
        android:id="@+id/textView79"
        android:layout_margin="5dp" />
</LinearLayout>