<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/sfv6"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/instrucciones"
        android:id="@+id/textView69"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressconmancuerna1"
        android:id="@+id/textView70"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressconmancuerna2"
        android:id="@+id/textView71"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressconmancuerna3"
        android:id="@+id/textView72"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />
</LinearLayout>