<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <SurfaceView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/sfv3"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/instrucciones"
        android:id="@+id/textView62"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressbancodeclinado1"
        android:id="@+id/textView63"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressbancodeclinado2"
        android:id="@+id/textView64"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />
</LinearLayout>