<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".rutina"
        android:orientation="vertical"
        android:background="#fffdfbff">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/home_login"
                    android:text="@string/home_login"
                    android:state_pressed="true"
                    android:id="@+id/btn_abdm"
                    android:layout_column="0"
                    android:src="@drawable/abdominalesrutinasm"
                    android:layout_marginBottom="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_margin="10dp"
                    android:background="#fffcfffd" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/home_disciplina"
                    android:text="@string/home_disciplina"
                    android:id="@+id/btn_abdh"
                    android:layout_column="1"
                    android:src="@drawable/abdominalesrutinash"
                    android:layout_margin="10dp"
                    android:background="#fffffcfe"
                    android:layout_marginRight="0dp"
                    android:layout_marginLeft="0dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="-10dp"
                android:layout_marginLeft="20dp">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-10dp"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rutinas Abdominales"
                    android:id="@+id/textView37"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-10dp"
                android:layout_marginLeft="0dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/home_rutina"
                    android:text="@string/home_rutina"
                    android:id="@+id/btn_estm"
                    android:layout_column="0"
                    android:src="@drawable/estiramientosm"
                    android:layout_margin="10dp"
                    android:background="#fffcfffd"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/home_nutricion"
                    android:text="@string/home_nutricion"
                    android:id="@+id/btn_esth"
                    android:layout_column="1"
                    android:src="@drawable/estiramientosh"
                    android:layout_margin="10dp"
                    android:background="#fffffffb" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-10dp"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rutinas Estiramientos"
                    android:id="@+id/textView39"
                    android:layout_column="0"
                    android:layout_gravity="center" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-10dp"
                android:layout_marginLeft="0dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/home_ejercicios"
                    android:text="@string/home_ejercicios"
                    android:id="@+id/btn_prim"
                    android:layout_column="0"
                    android:src="@drawable/principiantem"
                    android:layout_margin="10dp"
                    android:background="#ffffffff" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/home_salir"
                    android:id="@+id/btn_prih"
                    android:text="@string/home_salir"
                    android:layout_column="1"
                    android:src="@drawable/principianteh"
                    android:layout_margin="10dp"
                    android:background="#ffffffff" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-10dp"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rutinas Principiantes"
                    android:id="@+id/textView41"
                    android:layout_column="0"
                    android:layout_gravity="center" />

            </TableRow>

        </TableLayout>


    </RelativeLayout>