<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".home"
    android:orientation="vertical"
    android:background="#fffdfbff">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="-10dp"
            android:layout_marginLeft="20dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_login"
                android:text="@string/home_login"
                android:state_pressed="true"
                android:id="@+id/btn_login"
                android:layout_column="0"
                android:src="@drawable/progreso"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:layout_margin="0dp"
                android:background="#fffcfffd" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_disciplina"
                android:text="@string/home_disciplina"
                android:id="@+id/btn_disciplina"
                android:layout_column="1"
                android:src="@drawable/disciplina"
                android:layout_margin="10dp"
                android:background="#fffffcfe"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="0dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-10dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tú Progreso"
                android:id="@+id/textView37"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disciplinas"
                android:id="@+id/textView38"
                android:layout_column="1"
                android:layout_gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-10dp"
            android:layout_marginLeft="20dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_rutina"
                android:text="@string/home_rutina"
                android:id="@+id/btn_rutina"
                android:layout_column="0"
                android:src="@drawable/rutina"
                android:layout_margin="10dp"
                android:background="#fffcfffd" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_nutricion"
                android:text="@string/home_nutricion"
                android:id="@+id/btn_nutricion"
                android:layout_column="1"
                android:src="@drawable/nutricion"
                android:layout_margin="10dp"
                android:background="#fffffffb" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-10dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rutinas"
                android:id="@+id/textView39"
                android:layout_column="0"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nutrición"
                android:id="@+id/textView40"
                android:layout_column="1"
                android:layout_gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-10dp"
            android:layout_marginLeft="20dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_ejercicios"
                android:text="@string/home_ejercicios"
                android:id="@+id/btn_ejercicios"
                android:layout_column="0"
                android:src="@drawable/ejercicios"
                android:layout_margin="10dp"
                android:background="#ffffffff" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home_salir"
                android:id="@+id/btn_salir"
                android:text="@string/home_salir"
                android:layout_column="1"
                android:src="@drawable/salir"
                android:layout_margin="10dp"
                android:background="#ffffffff" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-10dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ejercicios"
                android:id="@+id/textView41"
                android:layout_column="0"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Salir"
                android:id="@+id/textView42"
                android:layout_column="1"
                android:layout_gravity="center" />
        </TableRow>

    </TableLayout>


</RelativeLayout>
